Add task-specific parameter handling and improve data extraction logic